--- a/style.css
+++ b/style.css
@@ -25,11 +25,23 @@ body {
   text-align: center;
   font-size: 100px;
 }
+.alltwo,
+.allthree {
+  margin-top: 20px;
+}
 
 .one,
 .two,
 .three,
-.four {
+.four,
+.five,
+.six,
+.seven,
+.eight,
+.nine,
+.plus,
+.minus,
+.star {
   margin: 0 20px;
   width: 25%;
   height: 100px;
