--- a/style.css
+++ b/style.css
@@ -19,15 +19,20 @@ body {
 
 .display {
   width: 100%;
-  height: 100px;
+  height: 120px;
   background-color: blue;
   color: white;
   text-align: center;
   font-size: 100px;
 }
 .alltwo,
-.allthree {
+.allthree,
+.allfour {
   margin-top: 20px;
+}
+
+.allfive {
+  margin-bottom: 20px;
 }
 
 .one,
@@ -41,7 +46,15 @@ body {
 .nine,
 .plus,
 .minus,
-.star {
+.star,
+.zero,
+.zeros,
+.divide,
+.equals,
+.percent,
+.point,
+.clear,
+.delete {
   margin: 0 20px;
   width: 25%;
   height: 100px;
