--- a/style.css
+++ b/style.css
@@ -5,34 +5,49 @@
 }
 
 body {
-  min-width: 100vw;
-  min-height: 100vh;
   font-family: "Times New Roman", Times, serif;
   font: 400;
   font-size: 40px;
 }
 
-.all {
+.calculator {
   width: 100%;
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: rgb(77, 74, 74);
+}
+.calc {
+  background: #3a4442;
+  padding: 20px;
+  width: 50%;
+  border-radius: 30px;
+}
+
+.all {
   display: flex;
 }
 
 .display {
   width: 100%;
-  height: 120px;
-  background-color: blue;
+  height: 100px;
+  background-color: #61867e;
   color: white;
-  text-align: center;
+  text-align: right;
   font-size: 100px;
+  padding-right: 10px;
+  border-radius: 8px;
 }
+
 .alltwo,
 .allthree,
 .allfour {
-  margin-top: 20px;
+  margin-top: 2px;
 }
 
 .allfive {
-  margin-bottom: 20px;
+  margin-bottom: 2px;
 }
 
 .one,
@@ -55,13 +70,47 @@ body {
 .point,
 .clear,
 .delete {
-  margin: 0 20px;
-  width: 25%;
-  height: 100px;
-  background-color: black;
+  margin: 10px;
+  width: 100%;
+  height: 100%;
+  background-color: rgb(81, 99, 85);
   color: white;
   display: flex;
   align-items: center;
   justify-content: center;
   cursor: pointer;
+  border-radius: 25%;
+}
+@media (max-width: 667px) {
+  .calc {
+    width: 80%;
+  }
+
+  .display {
+    height: 50px;
+    font-size: 40px;
+  }
+  .one,
+  .two,
+  .three,
+  .four,
+  .five,
+  .six,
+  .seven,
+  .eight,
+  .nine,
+  .plus,
+  .minus,
+  .star,
+  .zero,
+  .zeros,
+  .divide,
+  .equals,
+  .percent,
+  .point,
+  .clear,
+  .delete {
+    font-size: 20px;
+    padding: 5px;
+  }
 }
